--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     </div>
 
     <!-- container=02 -->
-    <h1>Container = 02</h1>
+    <!-- <h1>Container = 02</h1>
     <div class="container2">
         <div class="header">header</div>
         <div class="menu">menu</div>
         <div class="content">content</div>
         <div class="footer">footer</div>
-    </div>
+    </div> -->
 
     <!-- container=03 -->
-    <h1>Container = 03</h1>
+    <!-- <h1>Container = 03</h1>
     <div class="container3">
         <div style="background-color: green;">0</div>
         <div class="big" style="background-color: #20ecc0;">1</div>
@@ -54,10 +54,10 @@
         <div style="background-color: #c40ded;">20</div>
         <div class="horizontal" style="background-color: #4d9a40;">21</div>
         
-    </div>
+    </div> -->
 
     <!-- container=04 -->
-    <h1>Container = 04</h1>
+    <!-- <h1>Container = 04</h1>
     <div class="container4">
         <div style="background-color: crimson;" class="one">1</div>
         <div style="background-color: #c40ded;" class="two">2</div>
@@ -71,6 +71,6 @@
         <div style="background-color: #056b06;" class="ten">10</div>
         <div style="background-color: #1c1067;" class="eleven">11</div>
         <div style="background-color: #ff0000;" class="twelve">12</div>
-    </div>
+    </div> -->
 </body>
 </html>
