--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     </div>
 
     <!-- container=02 -->
-    <!-- <h1>Container = 02</h1>
+    <h1>Container = 02</h1>
     <div class="container2">
         <div class="header">header</div>
         <div class="menu">menu</div>
         <div class="content">content</div>
         <div class="footer">footer</div>
-    </div> -->
+    </div>
 
     <!-- container=03 -->
     <!-- <h1>Container = 03</h1>
