--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- container=03 -->
-    <!-- <h1>Container = 03</h1>
+    <h1>Container = 03</h1>
     <div class="container3">
         <div style="background-color: green;">0</div>
         <div class="big" style="background-color: #20ecc0;">1</div>
@@ -54,7 +54,7 @@
         <div style="background-color: #c40ded;">20</div>
         <div class="horizontal" style="background-color: #4d9a40;">21</div>
         
-    </div> -->
+    </div>
 
     <!-- container=04 -->
     <!-- <h1>Container = 04</h1>
