--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <!-- container=04 -->
-    <!-- <h1>Container = 04</h1>
+    <h1>Container = 04</h1>
     <div class="container4">
         <div style="background-color: crimson;" class="one">1</div>
         <div style="background-color: #c40ded;" class="two">2</div>
@@ -71,6 +71,6 @@
         <div style="background-color: #056b06;" class="ten">10</div>
         <div style="background-color: #1c1067;" class="eleven">11</div>
         <div style="background-color: #ff0000;" class="twelve">12</div>
-    </div> -->
+    </div>
 </body>
 </html>
